Refactor for JDK 20